objects/GEMS_Billing_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GEMS Billing Profiles</relationshipLabel>
        <relationshipName>GEMS_Billing_Profiles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>GEMS_Address__c.Billing_Usage__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>GEMS_Address__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GEMS_Address__c</referenceTo>
        <relationshipLabel>Billing Profiles</relationshipLabel>
        <relationshipName>Billing_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Profile_Number__c</fullName>
        <label>Billing Profile Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Code__c</fullName>
        <label>Cancellation Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CBF – Cancel Billing Profile</fullName>
                </value>
                <value>
                    <fullName>CBG – Cancel BlueStar Group</fullName>
                    <isActive>false</isActive>
                    <label>CBG – Cancel BlueStar Group</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <description>Cancellation Date is auto displayed upon receiving secondary response from B* after cancellation process from Salesforce.</description>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Explanation__c</fullName>
        <label>Cancellation Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>401 Misc - Below Percentage</fullName>
                </value>
                <value>
                    <fullName>402 Misc - Reason/Unknown</fullName>
                </value>
                <value>
                    <fullName>403 Misc - Non-Payment of Dues</fullName>
                </value>
                <value>
                    <fullName>404 Misc - Grp Moved Out of State</fullName>
                </value>
                <value>
                    <fullName>405 Misc - Never Effective</fullName>
                </value>
                <value>
                    <fullName>406 Misc - New Group Number</fullName>
                </value>
                <value>
                    <fullName>408 Misc - Other UW Requirements</fullName>
                </value>
                <value>
                    <fullName>409 Misc - Acct has 0 Subs</fullName>
                </value>
                <value>
                    <fullName>410 Misc - Coverage Discontinued</fullName>
                </value>
                <value>
                    <fullName>411 Misc - New Decision Maker</fullName>
                </value>
                <value>
                    <fullName>412 Misc - Trans to Existing Acct</fullName>
                </value>
                <value>
                    <fullName>413 Misc - Broker Recommendation</fullName>
                </value>
                <value>
                    <fullName>414 Misc - Cons Cov w/1+ Carrier</fullName>
                </value>
                <value>
                    <fullName>415 Moved to Other BCBS Plan</fullName>
                </value>
                <value>
                    <fullName>416 Misc - Owner Chg/Merg/Acq</fullName>
                </value>
                <value>
                    <fullName>417 Misc - Parent Co Decision</fullName>
                </value>
                <value>
                    <fullName>418 Misc - Absorbed by ParentGrp</fullName>
                </value>
                <value>
                    <fullName>419 Misc - Out-of-Business</fullName>
                </value>
                <value>
                    <fullName>427 Misc - Political</fullName>
                </value>
                <value>
                    <fullName>433 Misc - Trans Due to Ben Chg</fullName>
                </value>
                <value>
                    <fullName>436 Misc - Changed Brokers</fullName>
                </value>
                <value>
                    <fullName>501 Claims - Service/Problems</fullName>
                </value>
                <value>
                    <fullName>502 Mbrship - Billing Serv/Prob</fullName>
                </value>
                <value>
                    <fullName>503 Service - Local Office</fullName>
                </value>
                <value>
                    <fullName>504 Service - Customer Service</fullName>
                </value>
                <value>
                    <fullName>608 Network - PPO/POS Hospital</fullName>
                </value>
                <value>
                    <fullName>609 Network - PPO/POS Phys</fullName>
                </value>
                <value>
                    <fullName>612 Network - HMO Hospital</fullName>
                </value>
                <value>
                    <fullName>613 Network - HMO Phys Network</fullName>
                </value>
                <value>
                    <fullName>614 Prod Design - Prescription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Status__c</fullName>
        <description>Status of the Cancelled Billing</description>
        <label>Cancellation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancellation Rejected</fullName>
                </value>
                <value>
                    <fullName>Requested Cancellation</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Submitted_Date__c</fullName>
        <label>Cancellation Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Billing Profiles</relationshipLabel>
        <relationshipName>Billing_Profiles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsDescUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDescUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Cancellation_Date__c</fullName>
        <label>Requested Cancellation Date</label>
        <type>Date</type>
    </fields>
    <label>GEMS Billing Profile</label>
    <nameField>
        <label>Billing Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEMS Billing Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>New_Record_Check</fullName>
        <active>true</active>
        <description>If IsNew__c = false, we should not allow to modify below (except admin)
1.	Billing Profile Number
2.	Effective Date
3.	Billing Address lookup
4.	Account lookup
5.	Case lookup</description>
        <errorConditionFormula>AND(NOT( Case__r.RecordType.DeveloperName=&apos;Account_Cancellation&apos;),IsNew__c = false ,NOT($Profile.Name=&apos;System Administrator&apos;),NOT($Profile.Name=&apos;Integration Profile&apos;),NOT(ISCHANGED( IsUpdated__c)),NOT(ISCHANGED( Name)))</errorConditionFormula>
        <errorMessage>Cannot update old Record</errorMessage>
    </validationRules>
</CustomObject>